Run PostLogin script as normal user

1) In daemon/gdm-slave.c it now sets PATH to GDM_SESSION_DEFAULT_PATH so that
   the scripts have the system normal PATH when run.

   This is much better than hardcoding the PATH in the scripts themselves,
   especially since the Init, PreSession, PostSession, and PostLogin scripts
   are designed to run per-display and it makes things just complicated if
   users need to add the common system path to any per-display script they
   might want to use.

2) The Init and PreSession scripts are fixed to set the PATH to "@X_PATH:$PATH"
   and not add "/bin:/usr/bin" since this isn't neeed since PATH is already
   set to GDM_SESSION_DEFAULT_PATH before running the script.

See https://bugzilla.gnome.org/show_bug.cgi?id=602403